# garage-engineering

./: .gitignore  .jsbeautifyrc  README.md  find_cyrillic.py  format.py  index.html  library.json  pyproject.toml
articles/: index.md
articles/little-big-things/: 01-ruff.md
articles/observability/: 01-paradox.md  Post_0.md
assets/css/: style.css
assets/js/: engine.js  script.js  shortcuts.js  utils.js
docs/doc/: help.md  manifest.md  monetization.md  refactoring_and_new_tasks.md
docs/doc/_development/: Analyze me iterations.md  Forge me remaining.md
docs/doc/decisions/: architecture.md
docs/doc/forgeme/: forgeme_product_overview.md  manifest.json  manifest.report.md
docs/doc/forgeme/Screens/: forgeme_mvp_screen.html
docs/doc/specs/: analyze-me-final.md  analyze-me.md  auth.md  env-variables.md  forge-me.md  iteration-log.md  market-me.md  ui-decisions.md
docs/doc/tests/forgeme/: tests_from_Claude.md
docs/doc/transition_docs/: May_6_forgeme.md
insights/category-little-big/: 01_little_big_things.html
scripts/: sync_templates.py
